k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-service
  labels:
    app: authorization-service
    istio.io/use-waypoint: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-service
  template:
    metadata:
      labels:
        app: authorization-service
    spec:
      serviceAccountName: authorization-service
      containers:
      - name: authorization-service
        image: authorization-service
        command: ["/usr/bin/app"]
        args: ["serve"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9090
          name: grpc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
