k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
  namespace: default
  labels:
    app: authorization-service
spec:
  selector:
    app: authorization-service
  ports:
  - name: grpc
    port: 9090
    targetPort: 9090
    protocol: TCP
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
