k8s/istio-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: external-authz
  namespace: default
spec:
  rules:
  - {}
  provider:
    name: "ext-authz"
